--- a/contactus.html
+++ b/contactus.html
@@ -60,7 +60,7 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="index.html">Home</a></li>
-                                <li><a href="aboutus.html">About Us</a></li> 
+                                <li><a href="about.html">About Us</a></li> 
                                 <li><a href="service.html">Services</a></li>                  
                                 <li class="active"><a href="contactus.html ">Contact Us</a></li>
 <!--/<li><a href="404.html">404 error</a></li>
