--- a/contactus.html
+++ b/contactus.html
@@ -81,11 +81,54 @@
             </div>
         </div>
     </header>
-    <!--/#header-->
-<br>
-<br>
-    
+    <!--/#header-->   
+
+    <section id="page-breadcrumb">
+        <div class="vertical-center sun">
+             <div class="container">
+                <div class="row">
+                    <div class="action">
+                        <div class="col-sm-12">
+                            <h1 class="title">Contact US</h1>
+                            <p>Stay close</p>
+                        </div>                        
+                    </div>
+                </div>
+            </div>
+        </div>
+   </section>
+    <!--/#action-->
+
+    <section id="map-section">
         <div class="container">
+            <div id="gmap"></div>
+            <div class="contact-info">
+                <h2>Contacts</h2>
+                        <address>
+                        E-mail: <a href="mailto:dela.ackuaku@goldchestgroup.com?subject= Mail from Our Site">dela.ackuaku@goldchestgroup.com</a> <br> 
+                        Phone: 0277551055 <br> 
+                        </address>
+
+
+                        <h2>Address</h2>
+                        <address>
+                        No.5 Anobaa CLose., <br> 
+                        Airport Residential Area, <br> 
+                        Accra, <br> 
+                        Ghana. <br> 
+                        </address>
+            </div>
+        </div>
+    </section> <!--/#map-section-->        
+
+    <br>
+    <br>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12 text-center bottom-separator">
+                   
+                </div>
+<div class="container">
             <div class="row">
                 <div class="col-md-4 col-sm-6">
                     <div class="testimonial bottom">
@@ -129,7 +172,6 @@
                     </div>
                 </div>
 
-
                 <div class="col-md-4 col-sm-12">
                     <div class="contact-form bottom">
                         <h2>Send a message</h2>
@@ -149,7 +191,9 @@
                         </form>
                     </div>
                 </div>
-                <footer id="footer">
+
+
+            <footer id="footer">
         <div class="container">
             <div class="row">
                 <div class="col-sm-12 text-center bottom-separator">
@@ -164,9 +208,12 @@
         </div>
     </footer>
     <!--/#footer-->
+
+
     <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/lightbox.min.js"></script>
+    <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=true"></script>
+    <script type="text/javascript" src="js/gmaps.js"></script>
     <script type="text/javascript" src="js/wow.min.js"></script>
     <script type="text/javascript" src="js/main.js"></script>   
 </body>
